--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -11,7 +11,8 @@
         android:textStyle="normal"
         android:textSize="17dp"
         android:padding="10dp"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme"
+        android:typeface="serif" />
  <!--   <TextView
         android:id="@+id/tvPriority"
         android:layout_width="wrap_content"
